--- a/public-ipfs-api/Cargo.toml
+++ b/public-ipfs-api/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "3.3.2"
+ipfs-api = "0.11.0"
+serde = "1.0.127"
+futures = "0.3.16"
